--- a/style.css
+++ b/style.css
@@ -1,51 +1,109 @@
 /* Reset body padding and margins */
-body { margin:0; padding:0; }
+body {
+	margin: 0;
+	padding: 0;
+}
 
 /* Make Header Sticky */
 #header_container {
-	background:#eee;
-	border:1px solid #666;
-	height:60px; left:0; position:fixed; width:100%;
-	top:0;
+	background: #eee;
+	border: 1px solid #666;
+	/*height: 60px;*/
+	left: 0;
+	position: fixed;
+	width: 100%;
+	top: 0;
 }
 
 #header {
-	/*line-height: 60px;*/
-	margin: 0 20px;
-	/*width: 940px;*/
-	text-align:center;
+	margin: 0 12px;
+		/* The 12px margin comes from the total left/right margins of the record>notice>task hierarchy */
+	text-align: center;
+	font: 10pt sans-serif;
 }
 
+.hidden {
+	display: none;
+}
 
 #header-table {
 	table-layout: fixed;
 	width: 100%;
-	border-right: 1px solid black;
 }
 
 #header-table th {
 	width: 7.14285714286%;
-	border-left: 1px solid black;
+	border-left: 1px solid white;
+}
+
+#header-table tr th:first-child {
+	border: none;
 }
 
 .change-record {
 	background-color: #99DDFF;
-	padding: 4px;
-	margin: 4px;
-	margin-left: 0;
-	margin-right: 0;
+	border-radius: 10px;
+	margin: 8px 4px;
 }
+
+/* This class is added as a slight visual fix when expanded */
+.change-record-expanded {
+	padding-bottom: 2px;
+}
+
+.change-record-title {
+	margin: 0;
+	padding: 12px;
+	border-radius: 8px;
+	font-family: sans-serif;
+	font-size: 12pt;
+}
+
+.change-record-title:hover {
+	background-color: #AAFFFF;
+	cursor: pointer;
+}
+
+/*.change-record-collapsed {
+	border-radius: 8px 8px 0 0;
+}*/
 
 .change-notice {
 	background-color: #FFDD99;
-	padding: 4px;
+	border-radius: 10px;
 	margin: 4px;
+}
+
+.change-notice-title {
+	margin: 0;
+	padding: 12px;
+	border-radius: 8px;
+	font-family: sans-serif;
+	font-size: 10pt;
+}
+
+.change-notice-title:hover {
+	background-color: #FFFFAA;
+	cursor: pointer;
 }
 
 .change-task {
 	background-color: #99FF99;
-	padding: 4px;
 	margin: 4px;
+	border-radius: 8px;
+}
+
+.change-task-title {
+	margin: 0;
+	padding: 12px;
+	border-radius: 8px;
+	font-family: sans-serif;
+	font-size: 12pt;
+}
+
+.change-task-title:hover {
+	background-color: #BBFFBB;
+	cursor: pointer;
 }
 
 .change-task table {
