--- a/style.css
+++ b/style.css
@@ -42,18 +42,18 @@ body {
 
 /* Change Record */
 
-.change-record {
+.CR {
 	background-color: #99DDFF;
 	border-radius: 10px;
 	margin: 8px 4px;
 }
 
 /* This class is added as a slight visual fix when expanded */
-.change-record-expanded {
+.CR-expanded {
 	padding-bottom: 2px;
 }
 
-.change-record-title {
+.CR-title {
 	margin: 0;
 	padding: 12px;
 	border-radius: 8px;
@@ -61,12 +61,21 @@ body {
 	font-size: 12pt;
 }
 
-.change-record-title:hover {
+.CR-title:hover {
 	background-color: #AAFFFF;
 	cursor: pointer;
 }
 
-/*.change-record-collapsed {
+.CR-notice-count {
+	font-family: sans-serif;
+	font-size: 10pt;
+	margin: 6px;
+	top: 0;
+	right: 0;
+	position: absolute;
+}
+
+/*.CR-collapsed {
 	border-radius: 8px 8px 0 0;
 }*/
 
