--- a/style.css
+++ b/style.css
@@ -81,13 +81,13 @@ body {
 
 /* Change Notice */
 
-.change-notice {
+.CN {
 	background-color: #FFDD99;
 	border-radius: 10px;
 	margin: 4px;
 }
 
-.change-notice-title {
+.CN-title {
 	margin: 0;
 	padding: 12px;
 	border-radius: 8px;
@@ -95,9 +95,18 @@ body {
 	font-size: 10pt;
 }
 
-.change-notice-title:hover {
+.CN-title:hover {
 	background-color: #FFFFAA;
 	cursor: pointer;
+}
+
+.CN-task-count {
+	font-family: sans-serif;
+	font-size: 10pt;
+	margin: 6px;
+	top: 0;
+	right: 0;
+	position: absolute;
 }
 
 /* Change Task */
