--- a/style.css
+++ b/style.css
@@ -112,41 +112,50 @@ body {
 
 /* Change Task */
 
-.change-task {
+.CT {
 	background-color: #99FF99;
 	margin: 4px;
 	border-radius: 8px;
 }
 
-.change-task-title {
+.CT-title {
 	margin: 0;
 	padding: 12px;
 	border-radius: 8px;
 	font-family: sans-serif;
-	font-size: 12pt;
+	font-size: 11pt;
 }
 
-.change-task-title:hover {
+.CT-title:hover {
 	background-color: #BBFFBB;
 	cursor: pointer;
 }
 
 /* Change Task - Part Table */
 
-.change-task table {
+.CT table {
 	table-layout: fixed;
 	width: 100%;
 	/*border-right: 1px solid white;*/
 }
 
-.change-task td {
+.CT td {
 	width: 7.14285714286%;
 	border-left: 1px solid white;
 }
 
-.change-task tr td:first-child {
+.CT tr td:first-child {
 	/* Hide the left border on the first column */
 	border: none;
+}
+
+.CT-part-count {
+	font-family: sans-serif;
+	font-size: 10pt;
+	margin: 6px;
+	top: 0;
+	right: 0;
+	position: absolute;
 }
 
 /* Part */
