User-Task blocks are now visible below the part table in each change task, though not filled in.

--- a/style.css
+++ b/style.css
@@ -179,3 +179,25 @@ body {
 	background-color: #DDFFFF;
 	cursor: pointer;
 }
+
+/* Block */
+
+.block {
+	background-color: #BBFFFF;
+	margin: 12px;
+	font-family: sans-serif;
+	font-size: 10pt;
+}
+
+.block-header {
+	padding: 4px;
+}
+
+.block-user, .block-task {
+	font-weight: bold;
+}
+
+.block-header:hover {
+	background-color: #DDFFFF;
+	cursor: pointer;
+}
