--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 .CR {
 	background-color: #99DDFF;
 	border-radius: 10px;
-	margin: 8px 4px;
+	margin: 16px 4px;
 }
 
 /* This class is added as a slight visual fix when expanded */
@@ -154,8 +154,8 @@ body {
 /* Change Task - Part Table */
 
 .CT table {
-	table-layout: fixed;
-	width: 100%;
+	/*table-layout: fixed;*/
+	/*width: 100%;*/
 	/*border-right: 1px solid white;*/
 }
 
@@ -168,7 +168,7 @@ body {
 
 .CT tr td:first-child {
 	/* Hide the left border on the first column */
-	border: none;
+	/*border: none;*/
 }
 
 .CT-part-count {
@@ -218,9 +218,41 @@ body {
 	font-family: sans-serif;
 	font-size: 10pt;
 }
-.block-content{
-	text-align: center;
+
+.block-header-table {
+	margin: 0;
+	padding: 0;
+	table-layout: fixed;
+	width: 100%;
+	
 }
+
+.block-content {
+	background-color: #BBFFFF;
+	table-layout: fixed;
+	width: 100%;
+}
+
+.block-content tbody {
+	text-align: left;
+}
+
+.block-content tr {
+	margin-top: 8px;
+}
+
+.block-content th {
+	padding: 6px;
+	font: 14px sans-serif;
+	font-weight: bold;
+}
+
+.block-content td {
+	padding: 6px;
+	border-left: 1px dashed #888;
+	border-top: 1px dashed #888;
+}
+
 .block-header {
 	padding: 4px;
 	background-color: #BBFFFF;
