added yellow and enter pressed anywhere filters

--- a/style.css
+++ b/style.css
@@ -275,6 +275,10 @@ body {
 	background-color: #ff1919;
 
 }
+.block-almostlate {
+	background-color: #ffff00 ;
+
+}
 
 .block-late:hover {
 	background-color: #ff3232;
