--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ body {
 	text-align: right;
 }
 
+.lateCount {
+	color: #ff1919;
+}
+
 /* Change Record */
 
 .CR {
@@ -188,10 +192,6 @@ body {
 .CT-data {
 	margin-left: 10px;
 	font-size: 11pt;
-}
-
-.CT .lateCount {
-	color: #ff1919;
 }
 
 
